# atomsql

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py  test_atomsql.py
atomsql/: __init__.py  atomsql.py  db.py  fields.py  models.py  query.py
atomsql/backends/: base.py  postgres.py  sqlite.py
tests/: conftest.py  test_query_builder.py
